--- a/charter.tex
+++ b/charter.tex
@@ -72,8 +72,8 @@ Revisión & \multicolumn{1}{c|}{\cellcolor[HTML]{C0C0C0}Detalles de los cambios 
 1      & Se completa hasta el punto 5 inclusive                 & 30 de octubre de 2021 \\ \hline
 2      & Se completa hasta el punto 9 inclusive
 & 7 de noviembre de 2021 \\ \hline
-3      & Se completa hasta el punto 11 inclusive                & 16 de noviembre de 2021 \\ \hline
-%4      & Se completa el plan	                                 & dd/mm/aaaa \\ \hline
+3      & Se completa hasta el punto 12 inclusive                & 16 de noviembre de 2021 \\ \hline
+4      & Se completa el plan	                                 & 23 de noviembre de 2021 \\ \hline
 \end{tabularx}
 \end{table}
 
