--- a/charter.tex
+++ b/charter.tex
@@ -90,7 +90,7 @@ Buenos Aires, \fechaInicioName
 
 \vspace{2cm}
 
-Por medio de la presente se acuerda con el Ing. \authorname\hspace{1px} que su Trabajo Final de la \degreename\hspace{1px} se titulará ``\ttitle'', consistirá esencialmente en la implementación de una interfaz que permita configurar y relevar información de servomotores conectados a través de una red CAN, y tendrá un presupuesto preliminar estimado de 600 hs de trabajo y U\$1000, con fecha de inicio \fechaInicioName\hspace{1px} y fecha de presentación pública \fechaFinalName.
+Por medio de la presente se acuerda con el Ing. \authorname\hspace{1px} que su Trabajo Final de la \degreename\hspace{1px} se titulará ``\ttitle'', consistirá esencialmente en la implementación de una interfaz que permita configurar y relevar información de servomotores conectados a través de una red CAN, y tendrá un presupuesto preliminar estimado de 600 hs de trabajo y U\$D 6890, con fecha de inicio \fechaInicioName\hspace{1px} y fecha de presentación pública \fechaFinalName.
 
 Se adjunta a esta acta la planificación inicial.
 
@@ -462,7 +462,7 @@ En la figura \ref{fig:WBSGantt} se muestra el esquema de desglose de trabajo y e
 \section{12. Presupuesto detallado del proyecto}
 \label{sec:presupuesto}
 
-En el cuadro \ref{tab:costosProyecto} se detallan los costos del proyecto.
+En el cuadro \ref{tab:costosProyecto} se detallan los costos del proyecto. Se aclara que la cotización del dólar estadounidense (U\$D) a día de la fecha (23 de noviembre de 2021) es 100.79 AR\$ (pesos argentinos)
 
 \begin{table}[htpb]
 \centering
@@ -477,36 +477,36 @@ Descripción &
   \multicolumn{1}{c|}{\cellcolor[HTML]{C0C0C0}Valor total} \\ \hline
 Horas de ingeniería &
   \multicolumn{1}{c|}{630} &
-  \multicolumn{1}{c|}{8 U\$} &
-  \multicolumn{1}{c|}{5040 U\$} \\ \hline
+  \multicolumn{1}{c|}{8 U\$D} &
+  \multicolumn{1}{c|}{5040 U\$D} \\ \hline
   
 Dispositivos de testing &
   \multicolumn{1}{c|}{1} &
-  \multicolumn{1}{c|}{250 U\$} &
-  \multicolumn{1}{c|}{250 U\$} \\ \hline
+  \multicolumn{1}{c|}{250 U\$D} &
+  \multicolumn{1}{c|}{250 U\$D} \\ \hline
   
 Componentes electrónicos &
   \multicolumn{1}{c|}{1} &
-  \multicolumn{1}{c|}{300 U\$} &
-  \multicolumn{1}{c|}{300 U\$} \\ \hline
+  \multicolumn{1}{c|}{300 U\$D} &
+  \multicolumn{1}{c|}{300 U\$D} \\ \hline
   
 Placas PCB &
   \multicolumn{1}{c|}{1} &
-  \multicolumn{1}{c|}{150 U\$} &
-  \multicolumn{1}{c|}{150 U\$} \\ \hline  
+  \multicolumn{1}{c|}{150 U\$D} &
+  \multicolumn{1}{c|}{150 U\$D} \\ \hline  
   
 Servomotores &
   \multicolumn{1}{c|}{4} &
-  \multicolumn{1}{c|}{100 U\$} &
-  \multicolumn{1}{c|}{400 U\$} \\ \hline  
+  \multicolumn{1}{c|}{100 U\$D} &
+  \multicolumn{1}{c|}{400 U\$D} \\ \hline  
 
 Fabricación de caja &
   \multicolumn{1}{c|}{1} &
-  \multicolumn{1}{c|}{50 U\$} &
-  \multicolumn{1}{c|}{50 U\$} \\ \hline 
+  \multicolumn{1}{c|}{50 U\$D} &
+  \multicolumn{1}{c|}{50 U\$D} \\ \hline 
 
 \multicolumn{3}{|c|}{SUBTOTAL} &
-  \multicolumn{1}{c|}{6190 U\$} \\ \hline
+  \multicolumn{1}{c|}{6190 U\$D} \\ \hline
 \rowcolor[HTML]{C0C0C0} 
 \multicolumn{4}{|c|}{\cellcolor[HTML]{C0C0C0}COSTOS INDIRECTOS} \\ \hline
 \rowcolor[HTML]{C0C0C0} 
@@ -517,24 +517,24 @@ Descripción &
   
 Horas de administración &
   \multicolumn{1}{c|}{50} &
-  \multicolumn{1}{c|}{5 U\$} &
-  \multicolumn{1}{c|}{250 U\$} \\ \hline 
+  \multicolumn{1}{c|}{5 U\$D} &
+  \multicolumn{1}{c|}{250 U\$D} \\ \hline 
 
 Horas de uso de PC &
   \multicolumn{1}{c|}{680} &
-  \multicolumn{1}{c|}{0.5 U\$} &
-  \multicolumn{1}{c|}{340 U\$} \\ \hline 
+  \multicolumn{1}{c|}{0.5 U\$D} &
+  \multicolumn{1}{c|}{340 U\$D} \\ \hline 
   
 Horas de uso de máquinas &
   \multicolumn{1}{c|}{40} &
-  \multicolumn{1}{c|}{2 U\$} &
-  \multicolumn{1}{c|}{80 U\$} \\ \hline 
+  \multicolumn{1}{c|}{2 U\$D} &
+  \multicolumn{1}{c|}{80 U\$D} \\ \hline 
 
 \multicolumn{3}{|c|}{SUBTOTAL} &
-  \multicolumn{1}{c|}{670 U\$} \\ \hline
+  \multicolumn{1}{c|}{670 U\$D} \\ \hline
 \rowcolor[HTML]{C0C0C0}
 \multicolumn{3}{|c|}{TOTAL} &
-\multicolumn{1}{c|}{6890 U\$}
+\multicolumn{1}{c|}{6890 U\$D}
    \\ \hline
 \end{tabularx}%
 \caption{Costos del proyecto}
@@ -645,12 +645,12 @@ Para cada uno de los requerimientos del proyecto se enuncia el procedimiento de 
 		\item Verificación: Se verá que el mensaje pueda indicar correctamente el número de instrucción con 4 bits.
 		\item Validación: Se enviará a un motor un programa con 15 instrucciones.
 	\end{itemize}
-	\item \REQ ~El sistema debe tener la capacidad de enviar cada una de las instrucciones de programa disponibles en los servomotores. Estas son: Seteo de tipo de control, verificación de señal de control, pausa de la señal de control, apagado de control, comunicación, reseteo de programa.
+	\item \REQ ~El sistema debe tener la capacidad de enviar cada una de las instrucciones de programa disponibles en los servomotores. Estas son: seteo de tipo de control, verificación de señal de control, pausa de la señal de control, apagado de control, comunicación, reseteo de programa.
 	\begin{itemize}
 		\item Verificación: Se verá que el mensaje pueda indicar correctamente la instrucción.
 		\item Validación: Se enviará a un motor cada una de las instrucciones.
 	\end{itemize}
-	\item \REQ ~El sistema debe enviar, para cada instrucción, todos los atributos de configuración necesarios. Estos son: Selección de variable de control, seteo de variable de control, tiempo de cumplimiento de instrucción, tiempo de timeout, error permisible de la variable de control, torque máximo de motor, tipo de comunicación y mensaje.
+	\item \REQ ~El sistema debe enviar, para cada instrucción, todos los atributos de configuración necesarios. Estos son: selección de variable de control, seteo de variable de control, tiempo de cumplimiento de instrucción, tiempo de timeout, error permisible de la variable de control, torque máximo de motor, tipo de comunicación y mensaje.
 	\begin{itemize}
 		\item Verificación: Se verá que el mensaje pueda indicar correctamente la instrucción.
 		\item Validación: Se enviará a un motor cada una de las instrucciones.
@@ -698,7 +698,7 @@ Para cada uno de los requerimientos del proyecto se enuncia el procedimiento de 
 	\item \REQ ~Las señales al controlador externo deben ser del tipo NPN.
 	\begin{itemize}
 		\item Verificación: Se comprobarán los esquemáticos de los PCB y los componentes seleccionados.
-		\item Validación: Se hará una demostración con instrumentos de medición de tipo de salida.
+		\item Validación: Se hará una demostración con instrumentos de medición del tipo de salida.
 	\end{itemize}
 	\item \REQ ~Las señales al controlador externo deben poder ser a distinta tensión que la empleada por el microcontrolador, hasta 24V.
 	\begin{itemize}
@@ -748,7 +748,7 @@ Para cada uno de los requerimientos del proyecto se enuncia el procedimiento de 
 A continuación se enuncian cuáles serán las actividades de cierre del proyecto y quien será el encargado de su organización:
 
 \begin{itemize}
-	\item Reunión de evaluación de proyecto: A realizar con \supname , director del trabajo. Se estudiará en que medida se respetó el plan de proyecto original, comparando con los resultados obtenidos. También se evaluarán las técnicas emlpeadas y se las distinguirá entre eficientes e ineficientes, según si ayudaron a que el proyecto se realice en tiempo y cumpliendo las pautas de calidad y riesgo. Se escribirá un documento que detalle las conclusiones de dicha reunión, como referencia para proyectos futuros. (Encargado: \authorname) 
+	\item Reunión de evaluación de proyecto: A realizar con \supname , director del trabajo. Se estudiará en que medida se respetó el plan de proyecto original, comparando con los resultados obtenidos. También se evaluarán las técnicas empleadas y se las distinguirá entre eficientes e ineficientes, según si ayudaron a que el proyecto se realice en tiempo y cumpliendo las pautas de calidad y riesgo. Se escribirá un documento que detalle las conclusiones de dicha reunión, como referencia para proyectos futuros. (Encargado: \authorname) 
 	\item Reunión de agradecimiento: A realizar con \supname , director del trabajo y los colaboradores de Cambre, que ayuden en la implementación en planta. (Encargado: \authorname)
 \end{itemize}
 
